@@ -18,17 +18,16 @@
 package org.apache.ignite.internal.table;
 
 import java.lang.reflect.Method;
+import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Phaser;
 import java.util.concurrent.atomic.AtomicBoolean;
-import org.apache.ignite.configuration.RootKey;
-import org.apache.ignite.configuration.annotation.ConfigurationType;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
@@ -36,6 +35,8 @@ import org.apache.ignite.internal.affinity.AffinityManager;
 import org.apache.ignite.internal.affinity.event.AffinityEvent;
 import org.apache.ignite.internal.affinity.event.AffinityEventParameters;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
+import org.apache.ignite.internal.configuration.storage.TestConfigurationStorage;
+import org.apache.ignite.internal.configuration.tree.NamedListNode;
 import org.apache.ignite.internal.configuration.util.ConfigurationUtil;
 import org.apache.ignite.internal.manager.EventListener;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
@@ -49,8 +50,10 @@ import org.apache.ignite.internal.schema.configuration.SchemaConfigurationConver
 import org.apache.ignite.internal.schema.event.SchemaEvent;
 import org.apache.ignite.internal.schema.event.SchemaEventParameters;
 import org.apache.ignite.internal.table.distributed.TableManager;
+import org.apache.ignite.internal.testframework.WorkDirectory;
+import org.apache.ignite.internal.testframework.WorkDirectoryExtension;
+import org.apache.ignite.internal.util.ByteUtils;
 import org.apache.ignite.internal.util.Cursor;
-import org.apache.ignite.internal.vault.VaultManager;
 import org.apache.ignite.lang.ByteArray;
 import org.apache.ignite.lang.IgniteLogger;
 import org.apache.ignite.network.ClusterNode;
@@ -60,6 +63,7 @@ import org.apache.ignite.schema.SchemaBuilders;
 import org.apache.ignite.schema.SchemaTable;
 import org.apache.ignite.table.Table;
 import org.jetbrains.annotations.NotNull;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -67,7 +71,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.platform.commons.util.ReflectionUtils;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
+import static org.apache.ignite.configuration.annotation.ConfigurationType.DISTRIBUTED;
+import static org.apache.ignite.configuration.annotation.ConfigurationType.LOCAL;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -86,7 +94,8 @@ import static org.mockito.Mockito.when;
 /**
  * Tests scenarios for table manager.
  */
-@ExtendWith(MockitoExtension.class)
+@ExtendWith({MockitoExtension.class, WorkDirectoryExtension.class})
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class TableManagerTest {
     /** The logger. */
     private static final IgniteLogger LOG = IgniteLogger.forClass(TableManagerTest.class);
@@ -112,8 +121,11 @@ public class TableManagerTest {
     /** Node name. */
     private static final String NODE_NAME = "node1";
 
-    /** Configuration manager. */
-    private ConfigurationManager cfrMgr;
+    /** Node configuration manager. */
+    private ConfigurationManager nodeCfgMgr;
+
+    /** Cluster configuration manager. */
+    private ConfigurationManager clusterCfgMgr;
 
     /** MetaStorage manager. */
     @Mock(lenient = true)
@@ -131,9 +143,8 @@ public class TableManagerTest {
     @Mock(lenient = true)
     private Loza rm;
 
-    /** Vault manager. */
-    @Mock(lenient = true)
-    private VaultManager vm;
+    @WorkDirectory
+    private Path workDir;
 
     /** Test node. */
     private final ClusterNode node = new ClusterNode(
@@ -144,21 +155,32 @@ public class TableManagerTest {
 
     /** Before all test scenarios. */
     @BeforeEach
-    private void before() {
+    void setUp() {
         try {
-            cfrMgr = new ConfigurationManager(rootConfigurationKeys(), Arrays.asList(
-                new TestConfigurationStorage(ConfigurationType.LOCAL),
-                new TestConfigurationStorage(ConfigurationType.DISTRIBUTED)));
+            nodeCfgMgr = new ConfigurationManager(
+                List.of(NodeConfiguration.KEY),
+                Map.of(),
+                new TestConfigurationStorage(LOCAL)
+            );
 
-            cfrMgr.bootstrap("{\n" +
+            clusterCfgMgr = new ConfigurationManager(
+                List.of(ClusterConfiguration.KEY, TablesConfiguration.KEY),
+                Map.of(),
+                new TestConfigurationStorage(DISTRIBUTED)
+            );
+
+            nodeCfgMgr.start();
+            clusterCfgMgr.start();
+
+            nodeCfgMgr.bootstrap("{\n" +
                 "   \"node\":{\n" +
                 "      \"metastorageNodes\":[\n" +
                 "         \"" + NODE_NAME + "\"\n" +
                 "      ]\n" +
                 "   }\n" +
-                "}", ConfigurationType.LOCAL);
+                "}");
 
-            cfrMgr.bootstrap("{\n" +
+            clusterCfgMgr.bootstrap("{\n" +
                 "   \"cluster\":{\n" +
                 "   \"metastorageNodes\":[\n" +
                 "      \"" + NODE_NAME + "\"\n" +
@@ -195,7 +217,7 @@ public class TableManagerTest {
                 "         }\n" +
                 "      }\n" +
                 "   }\n" +
-                "}", ConfigurationType.DISTRIBUTED);
+                "}");
         }
         catch (Exception e) {
             LOG.error("Failed to bootstrap the test configuration manager.", e);
@@ -204,13 +226,20 @@ public class TableManagerTest {
         }
     }
 
+    /** Stop configuration manager. */
+    @AfterEach
+    void tearDown() {
+        nodeCfgMgr.stop();
+        clusterCfgMgr.stop();
+    }
+
     /**
      * Tests a table which was defined before start through bootstrap configuration.
      */
-    @Disabled("https://issues.apache.org/jira/browse/IGNITE-14578")
+    @Disabled("https://issues.apache.org/jira/browse/IGNITE-15255")
     @Test
     public void testStaticTableConfigured() {
-        TableManager tableManager = new TableManager(cfrMgr, mm, sm, am, rm, vm);
+        TableManager tableManager = new TableManager(nodeCfgMgr, clusterCfgMgr, mm, sm, am, rm, workDir);
 
         assertEquals(1, tableManager.tables().size());
 
@@ -383,6 +412,8 @@ public class TableManagerTest {
         CompletableFuture<TableManager> tblManagerFut,
         Phaser phaser
     ) {
+        when(rm.prepareRaftGroup(any(), any(), any())).thenReturn(CompletableFuture.completedFuture(null));
+
         when(mm.hasMetastorageLocally(any())).thenReturn(true);
 
         CompletableFuture<UUID> tblIdFut = new CompletableFuture<>();
@@ -443,78 +474,75 @@ public class TableManagerTest {
             return null;
         }).when(am).listen(same(AffinityEvent.CALCULATED), any());
 
-        TableManager tableManager = new TableManager(cfrMgr, mm, sm, am, rm, vm);
+        TableManager tableManager = new TableManager(nodeCfgMgr, clusterCfgMgr, mm, sm, am, rm, workDir);
 
-        tblManagerFut.complete(tableManager);
+        TableImpl tbl2;
 
-        when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
-            Cursor<Entry> cursor = mock(Cursor.class);
+        try {
+            tableManager.start();
 
-            when(cursor.hasNext()).thenReturn(false);
-
-            return cursor;
-        });
-
-        int tablesBeforeCreation = tableManager.tables().size();
-
-        cfrMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY).tables().listen(ctx -> {
-            boolean createTbl = ctx.newValue().get(schemaTable.canonicalName()) != null &&
-                ctx.oldValue().get(schemaTable.canonicalName()) == null;
-
-            boolean dropTbl = ctx.oldValue().get(schemaTable.canonicalName()) != null &&
-                ctx.newValue().get(schemaTable.canonicalName()) == null;
-
-            if (!createTbl && !dropTbl)
-                return CompletableFuture.completedFuture(null);
-
-            tableCreatedFlag.set(createTbl);
+            tblManagerFut.complete(tableManager);
 
             when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
-                AtomicBoolean firstRecord = new AtomicBoolean(createTbl);
-
                 Cursor<Entry> cursor = mock(Cursor.class);
 
-                when(cursor.hasNext()).thenAnswer(hasNextInvocation ->
-                    firstRecord.compareAndSet(true, false));
-
-                Entry mockEntry = mock(Entry.class);
-
-                when(mockEntry.key()).thenReturn(new ByteArray(PUBLIC_PREFIX +
-                    ConfigurationUtil.escape(schemaTable.canonicalName()) + ".name"));
-
-                when(cursor.next()).thenReturn(mockEntry);
+                when(cursor.hasNext()).thenReturn(false);
 
                 return cursor;
             });
 
-            if (phaser != null)
-                phaser.arriveAndAwaitAdvance();
+            int tablesBeforeCreation = tableManager.tables().size();
 
-            return CompletableFuture.completedFuture(null);
-        });
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY).tables().listen(ctx -> {
+                boolean createTbl = ctx.newValue().get(schemaTable.canonicalName()) != null &&
+                    ctx.oldValue().get(schemaTable.canonicalName()) == null;
 
-        TableImpl tbl2 = (TableImpl)tableManager.createTable(schemaTable.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(schemaTable, tblCh)
-            .changeReplicas(1)
-            .changePartitions(10)
-        );
+                boolean dropTbl = ctx.oldValue().get(schemaTable.canonicalName()) != null &&
+                    ctx.newValue().get(schemaTable.canonicalName()) == null;
 
-        assertNotNull(tbl2);
+                if (!createTbl && !dropTbl)
+                    return CompletableFuture.completedFuture(null);
 
-        assertEquals(tablesBeforeCreation + 1, tableManager.tables().size());
+                tableCreatedFlag.set(createTbl);
+
+                when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
+                    AtomicBoolean firstRecord = new AtomicBoolean(createTbl);
+
+                    Cursor<Entry> cursor = mock(Cursor.class);
+
+                    when(cursor.hasNext()).thenAnswer(hasNextInvocation ->
+                        firstRecord.compareAndSet(true, false));
+
+                    Entry mockEntry = mock(Entry.class);
+
+                    when(mockEntry.key()).thenReturn(new ByteArray(PUBLIC_PREFIX + "uuid." + NamedListNode.NAME));
+
+                    when(mockEntry.value()).thenReturn(ByteUtils.toBytes(schemaTable.canonicalName()));
+
+                    when(cursor.next()).thenReturn(mockEntry);
+
+                    return cursor;
+                });
+
+                if (phaser != null)
+                    phaser.arriveAndAwaitAdvance();
+
+                return CompletableFuture.completedFuture(null);
+            });
+
+            tbl2 = (TableImpl)tableManager.createTable(schemaTable.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(schemaTable, tblCh)
+                .changeReplicas(1)
+                .changePartitions(10)
+            );
+
+            assertNotNull(tbl2);
+
+            assertEquals(tablesBeforeCreation + 1, tableManager.tables().size());
+        }
+        finally {
+            tableManager.stop();
+        }
 
         return tbl2;
-    }
-
-    /**
-     * Gets a list of configuration keys to use in the test scenario.
-     *
-     * @return List of root configuration keys.
-     */
-    private static List<RootKey<?, ?>> rootConfigurationKeys() {
-        return Arrays.asList(
-            NodeConfiguration.KEY,
-            ClusterConfiguration.KEY,
-            TablesConfiguration.KEY
-        );
     }
 }
